--- a/src/pages/contactPage.css
+++ b/src/pages/contactPage.css
@@ -28,17 +28,24 @@
   font-size: 1.5rem;
   font-weight: 700;
   color: rgb(31, 41, 55);
-  margin-bottom: 1rem;
+  margin-bottom: -0.1rem;
 }
 
 .contact-details {
   display: flex;
   flex-direction: column;
-  gap: 0.75rem;
+  gap: 1.5rem;
+}
+
+.info-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
 }
 
 .contact-text {
   color: rgb(75, 85, 99);
+  line-height: 1.1;
 }
 
 .contact-label {
